--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div id="wrapper">
                 <div id="navbar">
                     <div id="logo">
-                        
+                        CodePlayer
                     </div>
                 </div>
             </div>
