added runButton with styles

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
                     <div id="logo">
                         CodePlayer
                     </div>
+                    <div id="buttonDiv">
+                        <button id="runButton">Run</button>
+                    </div>
                 </div>
             </div>
             
