--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
                     <div id="buttonDiv">
                         <button id="runButton">Run</button>
                     </div>
+                    <ul id="toggleList">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JS</li>
+                        <li style="border: none">RESULT</li>
+                    </ul>
                 </div>
             </div>
             
