--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                         <li style="border: none">RESULT</li>
                     </ul>
                 </div>
+                <div class="clear"></div>
             </div>
             
             <script src="main.js" type="text/javascript"></script>
