--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     </ul>
                 </div>
                 <div class="clear"></div>
+                <div class="codeContainer"></div>
             </div>
             
             <script src="main.js" type="text/javascript"></script>
