--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         </head>
         <body>
             <div id="wrapper">
-                <div id="navbar">
+                <div id="navBar">
                     <div id="logo">
                         CodePlayer
                     </div>
