--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 </div>
                 <div class="clear"></div>
                 <div class="codeContainer" id="htmlContainer">
+                    <div class="codeLabel">HTML</div>
                     <textarea>Example code</textarea>
                 </div>
             </div>
