--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
                     <div class="codeLabel">HTML</div>
                     <textarea>Example code</textarea>
                 </div>
+                <div class="codeContainer" id="cssContainer">
+                    <div class="codeLabel">CSS</div>
+                    <textarea>Example code</textarea>
+                </div>
+                <div class="codeContainer" id="jsContainer">
+                    <div class="codeLabel">JAVASCRIPT</div>
+                    <textarea>Example code</textarea>
+                </div>
+                <div class="codeContainer" id="resultContainer">
+                    <div class="codeLabel">RESULT</div>
+                    
+                </div>
             </div>
             
             <script src="main.js" type="text/javascript"></script>
