--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="codeContainer" id="resultContainer">
                     <div class="codeLabel">RESULT</div>
-                    
+                    <iframe></iframe>
                 </div>
             </div>
             
