added toggleElement and selected class for the navbar elements

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                         <button id="runButton">Run</button>
                     </div>
                     <ul id="toggleList">
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>JS</li>
-                        <li style="border: none">RESULT</li>
+                        <li class="toggleElement selected">HTML</li>
+                        <li class="toggleElement">CSS</li>
+                        <li class="toggleElement">JS</li>
+                        <li class="toggleElement selected" style="border: none">RESULT</li>
                     </ul>
                 </div>
                 <div class="clear"></div>
