added toggle function for the containers

--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
                     </ul>
                 </div>
                 <div class="clear"></div>
-                <div class="codeContainer" id="htmlContainer">
+                <div class="codeContainer" id="HTMLContainer">
                     <div class="codeLabel">HTML</div>
                     <textarea>Example code</textarea>
                 </div>
-                <div class="codeContainer" id="cssContainer">
+                <div class="codeContainer" id="CSSContainer">
                     <div class="codeLabel">CSS</div>
                     <textarea>Example code</textarea>
                 </div>
-                <div class="codeContainer" id="jsContainer">
-                    <div class="codeLabel">JAVASCRIPT</div>
+                <div class="codeContainer" id="JSContainer">
+                    <div class="codeLabel">JS</div>
                     <textarea>Example code</textarea>
                 </div>
-                <div class="codeContainer" id="resultContainer">
+                <div class="codeContainer" id="RESULTContainer">
                     <div class="codeLabel">RESULT</div>
                     <iframe></iframe>
                 </div>
