added funtion to validate the code in the iframe

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
                 <div class="clear"></div>
                 <div class="codeContainer" id="HTMLContainer">
                     <div class="codeLabel">HTML</div>
-                    <textarea>Example code</textarea>
+                    <textarea id="htmlCode">Example code</textarea>
                 </div>
                 <div class="codeContainer" id="CSSContainer">
                     <div class="codeLabel">CSS</div>
-                    <textarea>Example code</textarea>
+                    <textarea id="cssCode">Example code</textarea>
                 </div>
                 <div class="codeContainer" id="JSContainer">
                     <div class="codeLabel">JS</div>
-                    <textarea>Example code</textarea>
+                    <textarea id="jsCode">Example code</textarea>
                 </div>
                 <div class="codeContainer" id="RESULTContainer">
                     <div class="codeLabel">RESULT</div>
